@@ -1,6 +1,7 @@
 linuxmuster-linbo (2.3.42-0) babo62; urgency=low
 
   * updated start.conf examples (#103).
+  * lmn7 only: improved patching reg files with sambadomainname (#104).
 
  -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 13 Jan 2019 20:34:56 +0100
 
